<resources>
    <string name="app_name">达人荟</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="nav_item_setclass">设置分类</string>
    <string name="nav_item_mybalance">我的余额</string>
    <string name="nav_item_index">首  页</string>
    <string name="nav_item_myorder">我的订单</string>
    <string name="nav_item_mycollect">我的收藏</string>
    <string name="nav_item_tobesuperman">成为达人</string>
    <string name="nav_item_superhome">达人主页</string>
    <string name="nav_item_feedback">意见反馈</string>
    <string name="nav_footer_aboutus">关于我们</string>
    <string name="nav_footer_settings">设置</string>
    <string name="title_activity_login">登录</string>
    <string name="title_fragment_register">注册</string>
    <string name="title_activity_register_info">个人基本信息</string>
    <string name="title_activity_register_by_phone">手机绑定</string>
    <string name="title_activity_reset_pwd">重置密码</string>
    <string name="title_activity_course_detail_info">课程详情</string>
    <string-array name="course_detail_info_list">
        <item>课程介绍</item>
        <item>达人简介</item>
        <item>学员评论</item>
    </string-array>
    <string-array name="order_list_item">
        <item>预约</item>
        <item>待付款</item>
        <item>待见面</item>
        <item>已完成</item>
        <item>取消/退款</item>
    </string-array>
    <string name="title_activity_order">预约</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_super_man_home">达人主页</string>
    <string name="title_activity_order_list">我的订单</string>
    <string name="title_activity_order_detail">订单详情</string>
    <string name="title_activity_my_balance">我的余额</string>
    <string name="title_activity_my_account">我的账户</string>
    <string name="title_activity_bind_with_bank">绑定支付宝账户</string>
    <string name="title_activity_to_be_super">达人认证</string>
    <string name="title_activity_my_course_list">我的课程</string>
    <string name="title_activity_add_course">添加课程</string>
    <string name="title_activity_edit_course">编辑课程</string>
    <string name="title_activity_choose_classify">选择分类</string>
    <string name="title_activity_sm_order_detail_actvity">我的订单</string>
    <string name="title_activity_collection">收藏</string>
    <string name="title_activity_evaluate">评价课程</string>
    <string name="title_activity_sm_introduce">达人主页</string>
    <string name="search_hint">输入课程或达人姓名进行搜索</string>
    <string name="title_activity_search_result">搜索结果</string>
    <string name="title_activity_con_list">消息</string>
    <string name="common_loading_message">正在加载中...</string>
    <string name="common_nomore_data">没有更多数据咯~</string>
    <string name="common_empty_msg">抱歉,暂未获取到数据!\n请稍后重试</string>
    <string name="common_empty_catalog_msg">该分类下暂无商品</string>
    <string name="common_error_msg">抱歉,系统出错了!\请稍后重试</string>
    <string name="common_no_network_msg">暂未连接上网络!\n请稍后重试</string>
    <string name="network_error_tips">请检查您的网络环境</string>
    <string name="inner_error_tips">服务暂时不可用请稍后重试</string>
    <string name="title_activity_modify_info">个人中心</string>
    <string name="collect_success">收藏成功</string>
    <string name="collect_quit_success">成功取消收藏</string>
    <string name="title_activity_input_pwd">InputPwdActivity</string>
    <string name="to_be_superman_hint">您上传的证书仅供平台审核身份使用，不会泄漏给他人</string>
    <string name="to_be_superman_refuse">您暂时没有权利进行此操作</string>
    <string name="to_be_superman_pending">您已经提交申请，系统正在审核.</string>
    <string name="title_activity_refuse">拒绝理由</string>
    <string name="order_refuse_tips">请简单写一下你拒绝的原因，预约者会收到即时的反馈</string>
    <string name="feedback_tips">您的宝贵意见是我们发展的动力，我们会仔细阅读，不断改进</string>
    <string name="refuse_edit_hint">请至少填写15个字</string>
    <string name="feedback_edit_hint">请在这里填写您的反馈内容</string>
    <string name="title_activity_feedback">意见反馈</string>
    <string name="title_activity_qrcode_show">我的二维码</string>
    <string name="title_activity_qrreader">扫码</string>
    <string name="unspport_message_type">暂不支持此消息类型</string>
    <string name="title_activity_paychannel">收银台</string>
    <string name="title_activity_edit_info">编辑资料</string>
    <string name="title_activity_edit_detail_info">编辑具体信息</string>
    <string name="bottom_tab_one">主页</string>
    <string name="bottom_tab_two">达人</string>
    <string name="bottom_tab_three">发现</string>
    <string name="bottom_tab_four">我</string>
</resources>
